create genaral cars html files andd link them to more details button in generalCars.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
@@ -119,7 +119,7 @@
                                             a Day : 100 km <br> Free Km for
                                             a Day : 2400 km <br> Price per
                                             Extra Km : Rs 30.00</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -134,7 +134,7 @@
                                             a Day : 100 km <br> Free Km for
                                             a Day : 2400 km <br> Price per
                                             Extra Km : Rs 35.00</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAltoK10-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +149,7 @@
                                             a Day : 100 km <br> Free Km for
                                             a Day : 2400 km <br> Price per
                                             Extra Km : Rs 35.00</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiCelerio-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
                                             a Day : 100 km <br> Free Km for
                                             a Day : 2400 km <br> Price per
                                             Extra Km : Rs 35.00</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="Perodua(Daihatsu)Axia-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                                             a Day : 100 km <br> Free Km for
                                             a Day : 2400 km <br> Price per
                                             Extra Km : Rs 49.50</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="ToyotaPriusC-Aqua-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -199,7 +199,7 @@
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br>Four passengers can travel in this car<br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -211,7 +211,7 @@
                                         <p class="card-text">We have 8 Suzuki Alto K10 - Auto cars to offer you to rent.<br>Four passengers can travel in this car<br> Daily
                                             Rate : 3000 <br> Monthly
                                             Rate : Rs 71,390.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAltoK10-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                                         <p class="card-text">We have 5 Suzuki Celerio - Auto cars to offer you to rent.<br>Four passengers can travel in this car<br> Daily
                                             Rate : 3300 <br> Monthly
                                             Rate : Rs 77,220.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiCelerio-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -235,7 +235,7 @@
                                         <p class="card-text">We have 2 Perodua (Daihatsu) Axia - Auto cars to offer you to rent.<br>Four passengers can travel in this car<br> Daily
                                             Rate : 3800 <br> Monthly
                                             Rate : Rs 90,200.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="Perodua(Daihatsu)Axia-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -247,7 +247,7 @@
                                         <p class="card-text">We have 8 Toyota Prius C/ Aqua - Auto cars to offer you to rent.<br>Four passengers can travel in this car<br> Daily
                                             Rate : 5000 <br> Monthly
                                             Rate : Rs 110,330.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="ToyotaPriusC-Aqua-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -267,7 +267,7 @@
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br>Transmission Type : Manual <br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -284,7 +284,7 @@
                                         <p class="card-text">We have 8 Suzuki Alto K10 - Auto cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                             Rate : 3000 <br> Monthly
                                             Rate : Rs 71,390.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAltoK10-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -296,7 +296,7 @@
                                         <p class="card-text">We have 5 Suzuki Celerio - Auto cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                             Rate : 3300 <br> Monthly
                                             Rate : Rs 77,220.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiCelerio-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -308,7 +308,7 @@
                                         <p class="card-text">We have 2 Perodua (Daihatsu) Axia - Auto cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                             Rate : 3800 <br> Monthly
                                             Rate : Rs 90,200.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="Perodua(Daihatsu)Axia-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -320,7 +320,7 @@
                                         <p class="card-text">We have 8 Toyota Prius C/ Aqua - Auto cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                             Rate : 5000 <br> Monthly
                                             Rate : Rs 110,330.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="ToyotaPriusC-Aqua-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -340,7 +340,7 @@
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -352,7 +352,7 @@
                                         <p class="card-text">We have 8 Suzuki Alto K10 - Auto cars to offer you to rent.<br> Daily
                                             Rate : 3000 <br> Monthly
                                             Rate : Rs 71,390.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAltoK10-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -364,7 +364,7 @@
                                         <p class="card-text">We have 5 Suzuki Celerio - Auto cars to offer you to rent.<br> Daily
                                             Rate : 3300 <br> Monthly
                                             Rate : Rs 77,220.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiCelerio-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -381,7 +381,7 @@
                                         <p class="card-text">We have 2 Perodua (Daihatsu) Axia - Auto cars to offer you to rent.<br> Daily
                                             Rate : 3800 <br> Monthly
                                             Rate : Rs 90,200.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="Perodua(Daihatsu)Axia-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -398,7 +398,7 @@
                                         <p class="card-text">We have 8 Toyota Prius C/ Aqua - Auto cars to offer you to rent.<br> Daily
                                             Rate : 5000 <br> Monthly
                                             Rate : Rs 110,330.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="ToyotaPriusC-Aqua-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -416,7 +416,7 @@
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 <br> Price per
                                             Extra Km : Rs 30.00</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -429,7 +429,7 @@
                                             Rate : 3000 <br> Monthly
                                             Rate : Rs 71,390.00 <br> Price per
                                             Extra Km : Rs 35.00</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAltoK10-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -442,7 +442,7 @@
                                             Rate : 3300 <br> Monthly
                                             Rate : Rs 77,220.00 <br> Price per
                                             Extra Km : Rs 35.00</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiCelerio-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -455,7 +455,7 @@
                                             Rate : 3800 <br> Monthly
                                             Rate : Rs 90,200.00 <br> Price per
                                             Extra Km : Rs 35.00</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="Perodua(Daihatsu)Axia-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -468,7 +468,7 @@
                                             Rate : 5000 <br> Monthly
                                             Rate : Rs 110,330.00 <br> Price per
                                             Extra Km : Rs 49.50</p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="ToyotaPriusC-Aqua-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -488,7 +488,7 @@
                                         <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br>Fuel Type : Petrol <br> Daily
                                             Rate : 2500 <br> Monthly
                                             Rate : Rs 64,350.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAlto-Premium-Manual.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -500,7 +500,7 @@
                                         <p class="card-text">We have 8 Suzuki Alto K10 - Auto cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                             Rate : 3000 <br> Monthly
                                             Rate : Rs 71,390.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiAltoK10-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -512,7 +512,7 @@
                                         <p class="card-text">We have 5 Suzuki Celerio - Auto cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                             Rate : 3300 <br> Monthly
                                             Rate : Rs 77,220.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="SuzukiCelerio-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -524,7 +524,7 @@
                                         <p class="card-text">We have 2 Perodua (Daihatsu) Axia - Auto cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                             Rate : 3800 <br> Monthly
                                             Rate : Rs 90,200.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="Perodua(Daihatsu)Axia-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -536,7 +536,7 @@
                                         <p class="card-text">We have 8 Toyota Prius C/ Aqua - Auto cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                             Rate : 5000 <br> Monthly
                                             Rate : Rs 110,330.00 </p>
-                                        <a href="#" class="btn btn-dark">More Details</a>
+                                        <a href="ToyotaPriusC-Aqua-Auto.html" class="btn btn-dark">More Details</a>
                                     </div>
                                 </div>
                             </div>
