create premium cars html files andd link them to more details button in premiumCars.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
@@ -120,7 +120,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 49.50</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 49.50</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -150,7 +150,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 60.00</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -165,7 +165,7 @@
                                         a Day : 100 km <br> Free Km for
                                         a Day : 2400 km <br> Price per
                                         Extra Km : Rs 65.00</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -210,7 +210,7 @@
                                         <br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -222,7 +222,7 @@
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Five passengers can travel in this car<br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -257,7 +257,7 @@
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                                     <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -281,7 +281,7 @@
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Transmission Type : Auto <br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -301,7 +301,7 @@
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -313,7 +313,7 @@
                                     <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -325,7 +325,7 @@
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -360,7 +360,7 @@
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00<br> Price per
                                         Extra Km : Rs 49.50 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -373,7 +373,7 @@
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00<br> Price per
                                         Extra Km : Rs 49.50 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -386,7 +386,7 @@
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 <br> Price per
                                         Extra Km : Rs 60.00</p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -399,7 +399,7 @@
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00<br> Price per
                                         Extra Km : Rs 65.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -419,7 +419,7 @@
                                     <p class="card-text">We have 4 Toyota Corolla Axio/ NZE141 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaCorollaAxio-NZE141.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -431,7 +431,7 @@
                                     <p class="card-text">We have 5 Perodua Bezza Prime Sedan - Auto (2017) cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5500 <br> Monthly
                                         Rate : Rs 120,330.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="PeroduaBezzaPrimeSedan-Auto.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -443,7 +443,7 @@
                                     <p class="card-text">We have 3 Toyota Allion NZT 260 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 5800 <br> Monthly
                                         Rate : Rs 155,760.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAllionNZT260.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
@@ -455,7 +455,7 @@
                                     <p class="card-text">We have 2 Toyota Axio NKR 165 cars to offer you to rent.<br>Fuel Type : Petrol<br> Daily
                                         Rate : 6000 <br> Monthly
                                         Rate : Rs 175,230.00 </p>
-                                    <a href="#" class="btn btn-dark">More Details</a>
+                                    <a href="ToyotaAxioNKR165.html" class="btn btn-dark">More Details</a>
                                 </div>
                             </div>
                         </div>
